Fixed: Blog title is invisible on blog view page of ecommerce store (OFBIZ-10486) The CSS rule defined in ecommain.css for 'a' overrides the rule for A.blogtitle, due to which the color of 'a' and its background became similar, thus making it invisible. To avoid such overriding, added 'important' attribute to css rule of A.blogtitle.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/branches/release16.11@1836876 13f79535-47bb-0310-9956-ffa450edef68

--- a/specialpurpose/ecommerce/webapp/ecommerce/images/blog.css
+++ b/specialpurpose/ecommerce/webapp/ecommerce/images/blog.css
@@ -139,10 +139,10 @@ background: #fffeee;
 }
 
 .blogtitle, A.blogtitle {
-color: white;
+color: white!important;
 font-weight: bold;
 text-align: left;
-text-decoration: none;
+text-decoration: none!important;
 display: inline;
 }
 
